[package]
name = "palladium"
version = "0.0.26"
authors = ["Fletcher Haynes <fletcher@subnetzero.io>"]
description = "A high level, dynamic language written for the Iridium VM."
license = "MIT"
homepage = "https://blog.subnetzero.io"
repository = "https://gitlab.com/subnetzero/palladium"

[dependencies]
nom = { version = "^4.2", features = ["verbose-errors"] }
iridium = "0.0.33"
